# template-pytorch-project

./: pyproject.toml
rnn_tf/: main.py
