[tool.poetry]
name = "rnn-tf"
version = "0.1.0"
description = ""
authors = ["Dr. Kiji <merdan.jp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.2"
numpy = "1.25.2"
torch = { version = "2.0.0", source = "torch_cu117"}
torchvision = { version = "0.15.0", source = "torch_cu117"}
torchaudio = { version = "2.0.0", source = "torch_cu117"}


[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"



[tool.poetry.group.dev.dependencies]
black = {version = "^23.9.1", source = "PyPI"}
mypy = {version = "^1.5.1", source = "PyPI"}
pre-commit = {version = "^3.4.0", source = "PyPI"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

